fix select z-index

--- a/projectforge-webapp/src/components/design/input/Input.module.scss
+++ b/projectforge-webapp/src/components/design/input/Input.module.scss
@@ -157,6 +157,7 @@
 
   .selectLabel {
     position: relative;
+    z-index: 0;
 
     .text {
       position: relative;
